<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.operations.CartListFragment">


    <ScrollView
        android:id="@+id/cart_list_scrollView_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_cart_heading_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/my_cart"
                android:textAlignment="center"
                android:textColor="#ff3d00"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cartView_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom|center_horizontal"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/items_total_text_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/items_total"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalFoodFee_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_total_value_text"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/delivery_service_text_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delivery_services"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deliveryPrice_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10.0"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tax_text_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tax"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/taxPrice_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="1.0"
                        android:textColor="#373b54"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textColor="#373b54"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalPaymentAmount_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/default_total_value_text"
                        android:textColor="#373b54"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView16_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/orange_button"
                    android:gravity="center"
                    android:text="@string/checkout"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/emptyTxt_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart_is_empty"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>